Fix libbz2 stream usage so that compression works again (bug 334768). r=darin.